{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 37,
  "lineage": "ce4be1f7-d9ac-148f-5e73-a7a928642001",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b9753bbbe11f70f3",
            "arn": "arn:aws:ec2:us-east-1:381491888334:elastic-ip/eipalloc-0b9753bbbe11f70f3",
            "domain": "vpc",
            "id": "eipalloc-0b9753bbbe11f70f3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-215-218-45.compute-1.amazonaws.com",
            "public_ip": "3.215.218.45",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e015e7156f0fcc5b",
            "arn": "arn:aws:ec2:us-east-1:381491888334:elastic-ip/eipalloc-0e015e7156f0fcc5b",
            "domain": "vpc",
            "id": "eipalloc-0e015e7156f0fcc5b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-89-230-243.compute-1.amazonaws.com",
            "public_ip": "3.89.230.243",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c69002280ed4baa",
            "arn": "arn:aws:ec2:us-east-1:381491888334:elastic-ip/eipalloc-04c69002280ed4baa",
            "domain": "vpc",
            "id": "eipalloc-04c69002280ed4baa",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-217-130-243.compute-1.amazonaws.com",
            "public_ip": "3.217.130.243",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491888334:internet-gateway/igw-0796931f281ee5d8f",
            "id": "igw-0796931f281ee5d8f",
            "owner_id": "381491888334",
            "tags": {
              "Name": "gros-main-igw"
            },
            "tags_all": {
              "Name": "gros-main-igw"
            },
            "vpc_id": "vpc-07130b088c99f690f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b9753bbbe11f70f3",
            "association_id": "eipassoc-083cf4ed386519bc6",
            "connectivity_type": "public",
            "id": "nat-0eba469229bbda4c1",
            "network_interface_id": "eni-0ca6439d89b113fca",
            "private_ip": "10.0.0.102",
            "public_ip": "3.215.218.45",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ec01a0b02166d19a",
            "tags": {
              "Name": "gros-main-nat-gateway-0"
            },
            "tags_all": {
              "Name": "gros-main-nat-gateway-0"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e015e7156f0fcc5b",
            "association_id": "eipassoc-09727b288a9fbcbad",
            "connectivity_type": "public",
            "id": "nat-052e0ccb3afe31465",
            "network_interface_id": "eni-09bec7acaf2488e28",
            "private_ip": "10.0.1.176",
            "public_ip": "3.89.230.243",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a51b620987e96bc0",
            "tags": {
              "Name": "gros-main-nat-gateway-1"
            },
            "tags_all": {
              "Name": "gros-main-nat-gateway-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c69002280ed4baa",
            "association_id": "eipassoc-0796b2dd065003768",
            "connectivity_type": "public",
            "id": "nat-047f60551843c5a8a",
            "network_interface_id": "eni-09d2a8ba007310f27",
            "private_ip": "10.0.2.154",
            "public_ip": "3.217.130.243",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-041a2b0e696051f24",
            "tags": {
              "Name": "gros-main-nat-gateway-2"
            },
            "tags_all": {
              "Name": "gros-main-nat-gateway-2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491888334:route-table/rtb-08b1377ee8134e4ac",
            "id": "rtb-08b1377ee8134e4ac",
            "owner_id": "381491888334",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eba469229bbda4c1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gros-private-route-table-0"
            },
            "tags_all": {
              "Name": "gros-private-route-table-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-07130b088c99f690f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491888334:route-table/rtb-0756113bfa59db854",
            "id": "rtb-0756113bfa59db854",
            "owner_id": "381491888334",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-052e0ccb3afe31465",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gros-private-route-table-1"
            },
            "tags_all": {
              "Name": "gros-private-route-table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07130b088c99f690f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491888334:route-table/rtb-0208305d99f1b97a4",
            "id": "rtb-0208305d99f1b97a4",
            "owner_id": "381491888334",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-047f60551843c5a8a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gros-private-route-table-2"
            },
            "tags_all": {
              "Name": "gros-private-route-table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-07130b088c99f690f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491888334:route-table/rtb-0301baf4f980d84db",
            "id": "rtb-0301baf4f980d84db",
            "owner_id": "381491888334",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0796931f281ee5d8f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "gros-public-route-table"
            },
            "tags_all": {
              "Name": "gros-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07130b088c99f690f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036e47f914f357877",
            "route_table_id": "rtb-08b1377ee8134e4ac",
            "subnet_id": "subnet-01385ea74dbf10996"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09245fceaa1fb7437",
            "route_table_id": "rtb-0756113bfa59db854",
            "subnet_id": "subnet-04401f98f6566e6ad"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cb72d3aceb473f3",
            "route_table_id": "rtb-0208305d99f1b97a4",
            "subnet_id": "subnet-03688682008f6d28f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aae811be4106892e",
            "route_table_id": "rtb-0301baf4f980d84db",
            "subnet_id": "subnet-0ec01a0b02166d19a"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b67f4518d91234ba",
            "route_table_id": "rtb-0301baf4f980d84db",
            "subnet_id": "subnet-0a51b620987e96bc0"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f2e26fb8e299abe",
            "route_table_id": "rtb-0301baf4f980d84db",
            "subnet_id": "subnet-041a2b0e696051f24"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491888334:security-group/sg-0912a500100a5c130",
            "description": "EKS Cluster security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0912a500100a5c130",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks_cluster_sg",
            "name_prefix": "",
            "owner_id": "381491888334",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07130b088c99f690f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491888334:subnet/subnet-01385ea74dbf10996",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01385ea74dbf10996",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491888334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gros-private-subnet-0",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "gros-private-subnet-0",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07130b088c99f690f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491888334:subnet/subnet-04401f98f6566e6ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04401f98f6566e6ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491888334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gros-private-subnet-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "gros-private-subnet-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07130b088c99f690f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491888334:subnet/subnet-03688682008f6d28f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03688682008f6d28f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381491888334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gros-private-subnet-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "gros-private-subnet-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07130b088c99f690f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491888334:subnet/subnet-0ec01a0b02166d19a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec01a0b02166d19a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381491888334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gros-public-subnet-0",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "gros-public-subnet-0",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07130b088c99f690f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491888334:subnet/subnet-0a51b620987e96bc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a51b620987e96bc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381491888334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gros-public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "gros-public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07130b088c99f690f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491888334:subnet/subnet-041a2b0e696051f24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041a2b0e696051f24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381491888334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gros-public-subnet-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "gros-public-subnet-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07130b088c99f690f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381491888334:vpc/vpc-07130b088c99f690f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0766175bbb3ad77a9",
            "default_route_table_id": "rtb-03cd8a8504337670e",
            "default_security_group_id": "sg-0189208bda3a83791",
            "dhcp_options_id": "dopt-01722a5a771e4d2fe",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07130b088c99f690f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03cd8a8504337670e",
            "owner_id": "381491888334",
            "tags": {
              "Name": "gros-main-vpc"
            },
            "tags_all": {
              "Name": "gros-main-vpc"
            }
          }
        }
      ]
    }
  ]
}